# ReachNote

./: .env.notion.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
assets/reachnote_brand_assets/docs/: README.md  export-manifest.csv  preview.html
crates/core/: Cargo.toml
crates/core/src/: analysis.rs  lib.rs  notion.rs  platform.rs  reach.rs  task.rs  template.rs
crates/core/src/ai/: cli.rs  mod.rs  openai.rs  types.rs
crates/core/src/testdata/: agent_reach_doctor.sample.json
docs/adr/: 0001-tech-stack.md
docs/discussions/: mvp-prd-information-architecture.md
memory/: README.md  backend-progress.md  design-source.md  desktop-qa.md  development-plan.md  frontend-progress.md  integration-progress.md  review-gate.md
plans/handoff/: 20260630-codex-slice-claude-provider.md  20260630-codex-slice-local-queue.md  20260701-codex-slice-notion-adapter.md  20260701-codex-slice2-platform-matrix.md  20260701-notion-adapter-prerequisites.md  20260702-1100-architecture-review-and-optimization-plan.md
plans/prds/: 20260630-1906-reachnote-mvp-reset.prd.md  20260701-1447-reachnote-next-phase-platform-template-destinations-onboarding-shortcuts.prd.md
scripts/: desktop-smoke-qa.sh  notion-smoke.sh
src/: App.tsx  constants.ts  main.tsx  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.qa.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  notion.rs  provider.rs  reader.rs  store.rs  worker.rs
src/capture/: CaptureView.tsx
src/components/: AppHeader.tsx  StatusBar.tsx
src/onboarding/: OnboardingView.tsx
src/queue/: QueueView.tsx
src/settings/: SettingsView.tsx
src/templates/: TemplatesView.tsx
