[package]
name = "reachnote-app"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "ReachNote desktop app (Tauri shell)."

[lib]
name = "reachnote_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reachnote-core = { path = "../crates/core" }
