[package]
name = "reachnote-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "reachnote_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reachnote-core = { path = "../crates/core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
# Pin: cookie 0.18.1 与 time 0.3.52 API 不兼容,锁定 0.3.41 以让 Tauri 依赖图通过 cargo check。勿升级。
time = { version = "=0.3.41", features = ["formatting"] }
wait-timeout = "0.2"
