[package]
name = "reachnote-core"
edition = "2021"
version = "0.0.1"
license = "MIT"
description = "ReachNote core: AI provider abstraction, content reading via Agent-Reach, structured analysis."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["process", "rt", "macros", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
